# LAuREL

./: .gitignore  .swp  LAuRA.hs  LAuREL.cabal  LAuREL.hs  LICENSE  Main.hs  README.md  example.g  index.html  main.py  params.json  parsetab.py
LAuREL/: Doc.hs  Eval.hs  Lib.hs  Parser.hs  Types.hs  ast.py  colors.py  errors.py  lexer.py  parser.py  stdlib.py
doc/: LAuREL-Doc.html  LAuREL-Eval.html  LAuREL-Lib.html  LAuREL.haddock  doc-index.html  mini_LAuREL-Eval.html  mini_LAuREL-Lib.html
doc/LAuREL/: LAuREL-Parser.html  LAuREL-Types.html  index-frames.html  index.html  mini_LAuREL-Doc.html  mini_LAuREL-Parser.html  mini_LAuREL-Types.html
examples/: ex1.g  ex1.md  ex2.g  ex2.md  ex3.g  ex3.md  ex4.g  ex4.md  ex5.g  ex5.md  ex6.g
