name:                LAuREL

version:             0.1.0.3
synopsis:            Like A Real Language
-- description:         
homepage:            http://geekschmerzen.org/LAuREL/
license:             BSD3
license-file:        LICENSE
author:              David Baumgartner
maintainer:          _davidbaumgartner@bluewin.ch
category:            Development
build-type:          Simple
cabal-version:       >=1.8

--library
--  hs-source-dirs: .
--  exposed-modules:
--    LAuREL.Doc
--    LAuREL.Eval
--    LAuREL.Lib 
--    LAuREL.Parser 
--    LAuREL.Types
--  build-depends:       base >=4.5, parsec ==3.1.*, MissingH ==1.2.*, uuid >= 1.2

executable LAuREL
  main-is: LAuREL.hs
  build-depends:       base >=4.5, parsec ==3.1.*, MissingH ==1.2.*, uuid >= 1.2
 
--executable LAuRA
--  main-is: LAuRA.hs 
--  build-depends:       base >=4.5, parsec ==3.1.*, MissingH ==1.2.*, uuid >= 1.2
 
  
